--- a/Mensajeria8.html
+++ b/Mensajeria8.html
@@ -17,7 +17,7 @@
             background-color: #f4f4f4;
             min-height: 100vh;
             padding: 20px;
-            padding-left: 300px; /* Space for the sidebar */
+            padding-left: 300px;
             padding-right: 20px;
         }
         .card {
@@ -31,20 +31,6 @@
         .card h3 {
             font-size: 1.5em;
             margin-bottom: 10px;
-        }
-        .card p, .card ul {
-            margin-bottom: 5px;
-        }
-        .card ul {
-            list-style: none;
-            padding: 0;
-        }
-        .card ul li {
-            padding: 10px 0;
-            border-bottom: 1px solid #eee;
-        }
-        .card ul li:last-child {
-            border-bottom: none;
         }
         .sidebar {
             position: fixed;
@@ -66,8 +52,6 @@
             color: white;
             text-decoration: none;
             font-weight: bold;
-            width: 100%;
-            text-align: left;
             transition: background 0.3s, color 0.3s;
         }
         .sidebar a:hover {
@@ -80,13 +64,13 @@
             font-weight: bold;
             margin-bottom: 20px;
         }
-        .sidebar .sidebar-footer {
+        .sidebar-footer {
             margin-top: auto;
             width: 100%;
             text-align: center;
             padding: 20px 0;
         }
-        .sidebar .sidebar-footer a {
+        .sidebar-footer a {
             display: inline-block;
             padding: 10px 20px;
             background-color: #ffeb3b;
@@ -94,7 +78,7 @@
             border-radius: 8px;
             transition: background 0.3s, color 0.3s;
         }
-        .sidebar .sidebar-footer a:hover {
+        .sidebar-footer a:hover {
             background-color: #ffc107;
             color: #0056b3;
         }
@@ -161,63 +145,14 @@
         .chat-input button:hover {
             background-color: #0056b3;
         }
-        .message {
-            margin-bottom: 15px;
-            padding: 10px;
-            border-radius: 5px;
-            background-color: #e9f5ff;
-        }
-        .message p {
-            margin: 0;
-        }
-        .message .sender {
-            font-weight: bold;
-            color: #007bff;
-        }
-        .message .timestamp {
-            font-size: 0.8em;
-            color: #888;
-        }
-        .attachment-btn {
-            background-color: #007bff;
-            color: white;
-            padding: 10px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            margin-left: 5px;
-            transition: background 0.3s, color 0.3s;
-        }
-        .attachment-btn:hover {
-            background-color: #0056b3;
-        }
-        .chat-input .upload-btn-wrapper {
-            position: relative;
-            overflow: hidden;
-            display: inline-block;
-        }
-        .upload-btn-wrapper input[type=file] {
-            font-size: 100px;
-            position: absolute;
-            left: 0;
-            top: 0;
-            opacity: 0;
-        }
         @media (max-width: 1024px) {
             .dashboard {
-                padding-left: 20px; 
+                padding-left: 20px;
             }
             .sidebar {
                 width: 100%;
                 height: auto;
                 position: relative;
-            }
-            .sidebar a {
-                display: inline-block;
-                padding: 10px;
-            }
-            .sidebar .sidebar-footer {
-                position: static;
             }
         }
     </style>
@@ -226,20 +161,21 @@
     <!-- Sidebar -->
     <div class="sidebar">
         <div class="sidebar-header">Mi Agenda Mediconnect</div>
-<nav>
-    <a href="Interface1.html"><img src="https://img.icons8.com/ios-filled/50/ffffff/home.png" class="inline-block w-6 h-6 mr-2"/>Inicio</a>
-    <a href="Interface2.html"><img src="https://img.icons8.com/ios-filled/50/ffffff/user.png" class="inline-block w-6 h-6 mr-2"/>Mi Perfil</a>
-    <a href="Interface3.html"><img src="https://img.icons8.com/ios-filled/50/ffffff/medical-history.png" class="inline-block w-6 h-6 mr-2"/>Historial Médico</a>
-    <a href="Interface4.html"><img src="https://img.icons8.com/ios-filled/50/ffffff/calendar.png" class="inline-block w-6 h-6 mr-2"/>Citas</a>
-    <a href="Interface5.html"><img src="https://img.icons8.com/ios-filled/50/ffffff/prescription.png" class="inline-block w-6 h-6 mr-2"/>Recetas</a>
-    <a href="Notificaciones10.html"><img src="https://img.icons8.com/ios-filled/50/ffffff/bell.png" class="inline-block w-6 h-6 mr-2"/>Notificaciones</a>
-    <a href="Mensajeria8.html"><img src="https://img.icons8.com/ios-filled/50/ffffff/chat.png" class="inline-block w-6 h-6 mr-2"/>Mensajería</a>
-    <a href="Interface6.html"><img src="https://img.icons8.com/ios-filled/50/ffffff/settings.png" class="inline-block w-6 h-6 mr-2"/>Configuración</a>
-</nav>
-<div class="sidebar-footer">
-    <a href="Log-in.htm"><img src="https://img.icons8.com/ios-filled/50/007bff/logout-rounded.png" class="inline-block w-6 h-6 mr-2"/>Cerrar Sesión</a>
-</div>
+        <nav>
+            <a href="Interface1.html"><img src="https://img.icons8.com/ios-filled/50/ffffff/home.png" class="inline-block w-6 h-6 mr-2"/>Inicio</a>
+            <a href="Interface2.html"><img src="https://img.icons8.com/ios-filled/50/ffffff/user.png" class="inline-block w-6 h-6 mr-2"/>Mi Perfil</a>
+            <a href="Interface3.html"><img src="https://img.icons8.com/ios-filled/50/ffffff/medical-history.png" class="inline-block w-6 h-6 mr-2"/>Historial Médico</a>
+            <a href="Interface4.html"><img src="https://img.icons8.com/ios-filled/50/ffffff/calendar.png" class="inline-block w-6 h-6 mr-2"/>Citas</a>
+            <a href="Interface5.html"><img src="https://img.icons8.com/ios-filled/50/ffffff/pill.png" class="inline-block w-6 h-6 mr-2"/>Prescripción de Recetas</a>
+            <a href="Notificaciones10.html"><img src="https://img.icons8.com/ios-filled/50/ffffff/bell.png" class="inline-block w-6 h-6 mr-2"/>Notificaciones</a>
+            <a href="Mensajeria8.html"><img src="https://img.icons8.com/ios-filled/50/ffffff/chat.png" class="inline-block w-6 h-6 mr-2"/>Mensajería</a>
+            <a href="Interface6.html"><img src="https://img.icons8.com/ios-filled/50/ffffff/settings.png" class="inline-block w-6 h-6 mr-2"/>Configuración</a>
+        </nav>
+        <div class="sidebar-footer">
+            <a href="index.html"><img src="https://img.icons8.com/ios-filled/50/007bff/logout-rounded.png" class="inline-block w-6 h-6 mr-2"/>Cerrar Sesión</a>
+        </div>
     </div>
+
     <!-- Main content -->
     <div class="dashboard">
         <h2 class="text-3xl font-semibold mb-6 text-center text-teal-800">Mensajería Instantánea</h2>
@@ -248,25 +184,10 @@
             <h3 class="text-teal-800">Chat en Tiempo Real</h3>
             <div class="chat-container">
                 <div class="chat-header">Chat con el Dr. López</div>
-                <div class="chat-messages" id="chat-messages">
-                    <div class="message">
-                        <p class="sender">Dr. López</p>
-                        <p>Hola, ¿cómo te sientes hoy?</p>
-                        <p class="timestamp">10:00 AM</p>
-                    </div>
-                    <div class="message">
-                        <p class="sender">Paciente</p>
-                        <p>Me siento mejor, gracias.</p>
-                        <p class="timestamp">10:02 AM</p>
-                    </div>
-                </div>
+                <div class="chat-messages" id="chat-messages"></div>
                 <div class="chat-input">
                     <input type="text" id="chat-input" placeholder="Escribe un mensaje...">
                     <button onclick="sendMessage()">Enviar</button>
-                    <div class="upload-btn-wrapper">
-                        <button class="attachment-btn">Adjuntar</button>
-                        <input type="file" name="file" />
-                    </div>
                 </div>
             </div>
         </div>
@@ -280,7 +201,27 @@
             </ul>
         </div>
     </div>
+
     <script>
+        async function cargarDatosFicticios() {
+            const response = await fetch('https://randomuser.me/api/?results=3');
+            const data = await response.json();
+            const messages = document.getElementById('chat-messages');
+
+            data.results.forEach(user => {
+                const messageDiv = document.createElement('div');
+                messageDiv.classList.add('message');
+                messageDiv.innerHTML = `
+                    <p class="sender">${user.name.first} ${user.name.last}</p>
+                    <p>${user.email}</p>
+                    <p class="timestamp">${new Date().toLocaleTimeString()}</p>
+                `;
+                messages.appendChild(messageDiv);
+            });
+        }
+
+        window.onload = cargarDatosFicticios;
+        
         function sendMessage() {
             const input = document.getElementById('chat-input');
             const messages = document.getElementById('chat-messages');
@@ -299,61 +240,5 @@
             }
         }
     </script>
-
-<script>
-    // Cargar mensajes del chat al cargar la página
-    $(document).ready(function() {
-        loadMessages();
-        
-        // Función para enviar un mensaje
-        function sendMessage() {
-            const input = document.getElementById('chat-input');
-            const message = input.value.trim();
-            if (message !== '') {
-                $.ajax({
-                    url: 'send_message.php',
-                    method: 'POST',
-                    data: {
-                        sender: 'Paciente',
-                        message: message
-                    },
-                    success: function(response) {
-                        console.log(response);
-                        input.value = '';
-                        loadMessages(); // Recargar mensajes después de enviar
-                    }
-                });
-            }
-        }
-
-        // Función para cargar mensajes
-        function loadMessages() {
-            $.ajax({
-                url: 'get_messages.php',
-                method: 'GET',
-                success: function(response) {
-                    const messages = JSON.parse(response);
-                    const messagesContainer = document.getElementById('chat-messages');
-                    messagesContainer.innerHTML = '';
-                    messages.forEach(function(msg) {
-                        const messageDiv = document.createElement('div');
-                        messageDiv.classList.add('message');
-                        messageDiv.innerHTML = `
-                            <p class="sender">${msg.sender}</p>
-                            <p>${msg.message}</p>
-                            <p class="timestamp">${new Date(msg.timestamp).toLocaleTimeString()}</p>
-                        `;
-                        messagesContainer.appendChild(messageDiv);
-                    });
-                    messagesContainer.scrollTop = messagesContainer.scrollHeight;
-                }
-            });
-        }
-
-        // Evento para enviar un mensaje cuando se presiona "Enviar"
-        document.querySelector('button[onclick="sendMessage()"]').addEventListener('click', sendMessage);
-    });
-</script>
 </body>
 </html>
-
